tests/cases/ok/string_slices.p4
def main() -> None:
    word = "compiler"
    phrase = "hello world"
    print(word[0:4])
    print(word[4:8])
    print(phrase[6:11])
