tests/cases/fail/parse_list_type_missing_member.p4
def main() -> None:
    xs: list[] = []
